gedcom/tests/snapshots/tests__golden_files@skipped_level.ged.snap
---
source: gedcom/tests/tests.rs
expression: "format!(\"{:?}\",\n    miette::Report::new(err).with_source_code(NamedSource::new(filename.to_string_lossy(),\n    data)))"
input_file: gedcom/tests/test_inputs/skipped_level.ged
---
gedcom::tree_error::invalid_child_level

  × Line structure error
  ╰─▶ Invalid child level 2, expected 1 or less
   ╭─[skipped_level.ged:2:1]
 1 │ 0 TAG
 2 │ 2 TAG
   · ┬
   · ╰── this should be less than or equal to 1
   ╰────
